Package refactoring; MainFrame added